--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-navigation-stack": "^2.8.2",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "expo-sqlite": "~8.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
