--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
     "expo": "~38.0.8",
+    "expo-cli": "^4.0.17",
     "expo-status-bar": "^1.0.2",
     "moment": "^2.29.1",
     "react": "~16.11.0",
