--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo": "~38.0.8",
     "expo-cli": "^4.0.17",
     "expo-status-bar": "^1.0.2",
+    "firebase": "^8.2.1",
     "ios": "0.0.1",
     "moment": "^2.29.1",
     "react": "~16.11.0",
