Backend is firebase for authenication

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "expo": "~38.0.8",
     "expo-cli": "^4.0.17",
     "expo-status-bar": "^1.0.2",
-    "firebase": "^8.2.1",
+    "firebase": "7.9.0",
     "ios": "0.0.1",
     "moment": "^2.29.1",
     "react": "~16.11.0",
@@ -29,7 +29,9 @@
     "react-navigation-stack": "^2.8.2",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "expo-auth-session": "~1.4.0",
+    "expo-random": "~8.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
