--- a/package.json
+++ b/package.json
@@ -10,31 +10,36 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.13.2",
     "@react-native-community/masked-view": "0.1.10",
-    "expo": "~38.0.8",
+    "chokidar": "^3.5.0",
+    "expo": "^40.0.0",
+    "expo-auth-session": "~3.0.0",
     "expo-cli": "^4.0.17",
-    "expo-status-bar": "^1.0.2",
-    "firebase": "7.9.0",
+    "expo-random": "~10.0.0",
+    "expo-status-bar": "^1.0.3",
+    "firebase": "^8.2.2",
     "ios": "0.0.1",
     "moment": "^2.29.1",
+    "node-fetch": "^2.6.1",
+    "node-forge": "^0.10.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-reanimated": "~1.9.0",
-    "react-native-safe-area-context": "~3.0.7",
-    "react-native-screens": "~2.9.0",
-    "react-native-web": "~0.11.7",
-    "react-navigation": "^4.4.0",
-    "react-navigation-header-buttons": "^5.0.2",
-    "react-navigation-stack": "^2.8.2",
-    "react-redux": "^7.2.1",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.0",
+    "react-native-web": "0.14.10",
+    "react-navigation": "^4.4.3",
+    "react-navigation-header-buttons": "6.0.2",
+    "react-navigation-stack": "^2.10.2",
+    "react-redux": "^7.2.2",
+    "react-refresh": "^0.9.0",
+    "react-refresh-webpack-plugin": "^0.1.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "expo-auth-session": "~1.4.0",
-    "expo-random": "~8.2.1"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
+    "@babel/core": "^7.12.10",
     "babel-preset-expo": "~8.1.0"
   },
   "private": true
