--- a/package.json
+++ b/package.json
@@ -15,20 +15,20 @@
     "expo-auth-session": "~3.0.0",
     "expo-cli": "^4.0.17",
     "expo-random": "~10.0.0",
-    "expo-status-bar": "^1.0.3",
-    "firebase": "^8.2.2",
+    "expo-status-bar": "~1.0.3",
+    "firebase": "7.9.0",
     "ios": "0.0.1",
     "moment": "^2.29.1",
     "node-fetch": "^2.6.1",
     "node-forge": "^0.10.0",
-    "react": "~16.11.0",
-    "react-dom": "~16.11.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-gesture-handler": "~1.6.0",
-    "react-native-reanimated": "~1.9.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-gesture-handler": "~1.8.0",
+    "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
-    "react-native-web": "0.14.10",
+    "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.3",
     "react-navigation-header-buttons": "6.0.2",
     "react-navigation-stack": "^2.10.2",
@@ -39,8 +39,8 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "babel-preset-expo": "~8.1.0"
+    "@babel/core": "~7.9.0",
+    "babel-preset-expo": "8.3.0"
   },
   "private": true
 }
