--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "investment_V3",
-    "slug": "investment_V3",
+    "name": "investment",
+    "slug": "investment",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
