--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-refresh": "^0.9.0",
     "react-refresh-webpack-plugin": "^0.1.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "@react-native-community/datetimepicker": "3.0.4"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
